# wasm-noise-generator

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/include/NoiseGenerator/: NoiseGenerator.h
cpp/src/: NoiseGenerator.cpp
js/: index.html  index.js
js/utils/: WASMAudioBuffer.js
js/worklet/: NoiseGenerator.wasmmodule.js  NoiseGenerator.wasmmodule.worker.js  NoiseGeneratorWorklet.js
scripts/: build.sh
